--- a/schools.html
+++ b/schools.html
@@ -37,31 +37,31 @@
         <ul>
             <li>
                 <h3>The Lexington School Learning Center - Grades K-12</h3>
-                <p><strong>Type of School:</strong> Independent</p>
-                <p><strong>Address:</strong> 1050 Lane Allen Road, Lexington, KY 40504</p>
-                <p><strong>Phone:</strong> 859-278-0501</p>
-                <p><strong>Date Established:</strong> 1959</p>
-                <p><strong>Applicable Grades:</strong> PS-8th</p>
-                <p><strong>Current Enrollment:</strong> 558</p>
-                <p><strong>Student/Teacher Ratio:</strong> 7:1</p>
-                <p><strong>Approximate Tuition and Fees:</strong> $27,000</p>
-                <p><strong>Multi-child Discount:</strong> Contact school for details.</p>
+                <strong>Type of School:</strong> Independent<br>
+                <strong>Address:</strong> 1050 Lane Allen Road, Lexington, KY 40504<br>
+                <strong>Phone:</strong> 859-278-0501<br>
+                <strong>Date Established:</strong> 1959<br>
+                <strong>Applicable Grades:</strong> PS-8th<br>
+                <strong>Current Enrollment:</strong> 558<br>
+                <strong>Student/Teacher Ratio:</strong> 7:1<br>
+                <strong>Approximate Tuition and Fees:</strong> $27,000<br>
+                <strong>Multi-child Discount:</strong> Contact school for details.<br>
             </li>
 
             <br>
 
             <li>
                 <h3>Sayre School - Grades PS-12th</h3>
-                <p><strong>Type of School:</strong> Independent</p>
-                <p><strong>Address:</strong> 194 North Limestone Street, Lexington, KY 40507</p>
-                <p><strong>Phone:</strong> 859-254-1361</p>
-                <p><strong>Date Established:</strong> 1854</p>
-                <p><strong>Applicable Grades:</strong> PS-12th</p>
-                <p><strong>Current Enrollment:</strong> 518</p>
-                <p><strong>Student/Teacher Ratio:</strong> 7:1</p>
-                <p><strong>Affiliations:</strong> Montessori program for ages 3-6</p>
-                <p><strong>Approximate Tuition and Fees:</strong> $4,000 - $20,370</p>
-                <p><strong>Multi-child Discount:</strong> Contact school for details.</p>
+                <strong>Type of School:</strong> Independent<br>
+                <strong>Address:</strong> 194 North Limestone Street, Lexington, KY 40507<br>
+                <strong>Phone:</strong> 859-254-1361<br>
+                <strong>Date Established:</strong> 1854<br>
+                <strong>Applicable Grades:</strong> PS-12th<br>
+                <strong>Current Enrollment:</strong> 518<br>
+                <strong>Student/Teacher Ratio:</strong> 7:1<br>
+                <strong>Affiliations:</strong> Montessori program for ages 3-6<br>
+                <strong>Approximate Tuition and Fees:</strong> $4,000 - $20,370<br>
+                <strong>Multi-child Discount:</strong> Contact school for details.<br>
             </li>
         </ul>
     </section>
