--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <div style="text-align: center; margin: 20px 0;">
             <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" 
                     title="Best Things to do in Lexington" allowfullscreen>
-                Your browser does not support iframes. <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Watch here</a>.
+            </iframe>  
+                <p>Your browser does not support iframes. <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Watch here</a>.</p>
             </iframe>
         </div>
     </section>
