--- a/schools.html
+++ b/schools.html
@@ -29,7 +29,6 @@
         <h2>Find the Right School</h2>
         <p>Our community is home to a variety of excellent private schools. Explore the list below to find the right fit for your child.</p>
         <p>Browse a list of schools that provide academic excellence.</p>
-        <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html" target="_blank">Find a School</a>
     </section>
 
     <section>
@@ -64,6 +63,8 @@
                 <strong>Multi-child Discount:</strong> Contact school for details.<br>
             </li>
         </ul>
+
+        <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html" target="_blank">You can find more private schools in here</a>
     </section>
 </main>
 
