--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
             <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" 
                     title="Best Things to do in Lexington" allowfullscreen>
             </iframe>  
-                <p>Your browser does not support iframes. <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Watch here</a>.</p>
-            </iframe>
-        </div>
+                <p>If the video doesn't start.
+                     <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Click here</a>.
+                </p>
+         </div>
     </section>
     
     <section>
@@ -93,7 +94,7 @@
     </section>
 
     <section>
-        <h2>Upcoming Events Calendar (RSS Feed)</h2>
+        <h2>Upcoming Events Calendar</h2>
         <p>Stay up to date with events happening in Lexington:</p>
         <a href="https://www.visitlex.com/things-to-do/calendar-of-events/" target="_blank">VisitLex Events Calendar</a>
     </section>
