--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             This website is designed as a <em>resource hub</em> for our community. Whether you're looking for a private school for your children or other local services, you'll find helpful information here.
         </p>
         <div style="text-align: center; margin: 20px 0;">
-            <img src="Multimedia files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY">
+            <img src="Multimedia_files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY">
         </div>
     </section>
 
