--- a/schools.html
+++ b/schools.html
@@ -70,7 +70,7 @@
 
 <!-- Full page centered image section -->
 <div class="image-container" style="text-align: center; margin: 20px 0;">
-    <img src="Multimedia files/HandsTogether.jpg" width="400" height="300" title="Hands Together" class="centered-image" alt="Hands Together">
+    <img src="Multimedia_files/HandsTogether.jpg" width="400" height="300" title="Hands Together" class="centered-image" alt="Hands Together">
 </div>
 
 <footer>
