--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <main>
     <section>
         <p>
+        <h2>Welcome to Our Community</h2>
             Helping newcomers settle into the city with essential information about the community center, private schools, and other local resources.
         </p>
     </section>
