--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <!-- Main content area -->
 <main>
     <section>
+        <h2>Welcome to Our Community</h2>    
         <p>
             Helping newcomers settle into the city with essential information about the community center, private schools, and other local resources.
         </p>
