--- a/resources.html
+++ b/resources.html
@@ -34,7 +34,7 @@
         <h2>Featured Resources</h2>
         <p>Here are some valuable resources available to community members:</p>
 
-        <table border="1">
+        <table class="resource-table">
             <thead>
                 <tr>
                     <th>Resource Name</th>
