--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="community center, private schools, resources">
     <meta name="author" content="Alaa El Mediouri">
     <title>Welcome to the Community Center</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
