--- a/schools.html
+++ b/schools.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Alaa El Mediouri">
     <title>Private Schools - Community Website</title>
     <link rel="icon" type="image/png" href="alaapic.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
