--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
     </section>
 
     <section>
-        <h2>Find a Community Center Near You</h2>
-        <article>
-            <p>Discover local community centers, their locations, and resources.</p>
-            <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
-            <a href="https://www.visitlex.com/things-to-do/" target="_blank">Explore Lexington</a>
-        </article>
-    </section>
+    <h2>Find a Community Center Near You</h2>
+    <article>
+        <h3>Local Centers Overview</h3>
+        <p>Discover local community centers, their locations, and resources.</p>
+        <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
+        <a href="https://www.visitlex.com/things-to-do/" target="_blank">Explore Lexington</a>
+    </article>
+</section>
 
     <section>
         <h2>Explore Our Community Resources</h2>
