--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A community website for newcomers providing information about the city, private schools, and local resources.">
-    <meta name="keywords" content="community center, private schools, resources">
-    <meta name="author" content="Alaa El Mediouri">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A community website for newcomers providing information about the city, private schools, and local resources." />
+    <meta name="keywords" content="community center, private schools, resources" />
+    <meta name="author" content="Alaa El Mediouri" />
     <title>Welcome to the Community Center</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<!-- Header Section -->
 <header>
     <h1>Welcome to the Community Website</h1>
     <nav>
@@ -26,49 +25,39 @@
     </nav>
 </header>
 
-<!-- Main content area -->
 <main>
     <section>
-        <h2>Welcome to Our Community</h2>    
-        <p>
-            Helping newcomers settle into the city with essential information about the community center, private schools, and other local resources.
-        </p>
+        <h2>Welcome to Our Community</h2>
+        <p>Helping newcomers settle into the city with essential information about the community center, private schools, and other local resources.</p>
     </section>
 
     <section>
         <h2>About This Site</h2>
-        <p>
-            This website is designed as a <em>resource hub</em> for our community. Whether you're looking for a private school for your children or other local services, you'll find helpful information here.
-        </p>
-        <div style="text-align: center; margin: 20px 0;">
-            <img src="Multimedia_files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY">
+        <p>This website is designed as a <em>resource hub</em> for our community. Whether you're looking for a private school for your children or other local services, you'll find helpful information here.</p>
+        <div id="about-image" class="image-container">
+            <img src="Multimedia_files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY" />
         </div>
     </section>
 
     <section>
-    <h2>Find a Community Center Near You</h2>
-    <article>
-        <h3>Local Centers Overview</h3>
-        <p>Discover local community centers, their locations, and resources.</p>
-        <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
-        <a href="https://www.visitlex.com/things-to-do/" target="_blank">Explore Lexington</a>
-    </article>
-</section>
+        <h2>Find a Community Center Near You</h2>
+        <article>
+            <h3>Local Centers Overview</h3>
+            <p>Discover local community centers, their locations, and resources.</p>
+            <blockquote>"A strong community is built on shared spaces, open doors, and welcoming hearts."</blockquote>
+            <a href="https://www.visitlex.com/things-to-do/" target="_blank">Explore Lexington</a>
+        </article>
+    </section>
 
     <section>
         <h2>Explore Our Community Resources</h2>
         <blockquote>Strong communities are built on connections, shared spaces, and accessible resources for everyone.</blockquote>
-
-        <div style="text-align: center; margin: 20px 0;">
-            <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" 
-                    title="Best Things to do in Lexington" allowfullscreen>
-            </iframe>  
-                <p>If the video doesn't start.
-                     <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">Click here</a>.
-                </p>
-         </div>
+        <div class="video-container">
+            <iframe width="600" height="350" src="https://www.youtube.com/embed/PsZjQXAGtlA?si=CrYGgd8PUQ7ED2iU" title="Best Things to do in Lexington" allowfullscreen></iframe>
+            <p>If the video doesn't load, <a href="https://www.youtube.com/watch?v=PsZjQXAGtlA">click here</a>.</p>
+        </div>
     </section>
-    
+
     <section>
         <h2>Things to Do</h2>
         <ul>
@@ -102,7 +91,6 @@
     </section>
 </main>
 
-<!-- Footer Section -->
 <footer>
     <p>&copy; 2025 Community Website | <a href="contact.html">Contact Us</a></p>
 </footer>
