--- a/schools.html
+++ b/schools.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find private schools in the community.">
-    <meta name="keywords" content="schools, private schools, education">
-    <meta name="author" content="Alaa El Mediouri">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Find private schools in the community." />
+    <meta name="keywords" content="schools, private schools, education" />
+    <meta name="author" content="Alaa El Mediouri" />
     <title>Private Schools - Community Website</title>
-    <link rel="icon" type="image/png" href="alaapic.png">
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Google Font and External CSS -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -37,39 +39,41 @@
         <ul>
             <li>
                 <h3>The Lexington School Learning Center - Grades K-12</h3>
-                <strong>Type of School:</strong> Independent<br>
-                <strong>Address:</strong> 1050 Lane Allen Road, Lexington, KY 40504<br>
-                <strong>Phone:</strong> 859-278-0501<br>
-                <strong>Date Established:</strong> 1959<br>
-                <strong>Applicable Grades:</strong> PS-8th<br>
-                <strong>Current Enrollment:</strong> 558<br>
-                <strong>Student/Teacher Ratio:</strong> 7:1<br>
-                <strong>Approximate Tuition and Fees:</strong> $27,000<br>
-                <strong>Multi-child Discount:</strong> Contact school for details.<br>
+                <span class="label">Type of School:</span> Independent<br>
+                <span class="label">Address:</span> 1050 Lane Allen Road, Lexington, KY 40504<br>
+                <span class="label">Phone:</span> 859-278-0501<br>
+                <span class="label">Date Established:</span> 1959<br>
+                <span class="label">Applicable Grades:</span> PS-8th<br>
+                <span class="label">Current Enrollment:</span> 558<br>
+                <span class="label">Student/Teacher Ratio:</span> 7:1<br>
+                <span class="label">Approximate Tuition and Fees:</span> $27,000<br>
+                <span class="label">Multi-child Discount:</span> Contact school for details.
             </li>
 
             <li>
                 <h3>Sayre School - Grades PS-12th</h3>
-                <strong>Type of School:</strong> Independent<br>
-                <strong>Address:</strong> 194 North Limestone Street, Lexington, KY 40507<br>
-                <strong>Phone:</strong> 859-254-1361<br>
-                <strong>Date Established:</strong> 1854<br>
-                <strong>Applicable Grades:</strong> PS-12th<br>
-                <strong>Current Enrollment:</strong> 518<br>
-                <strong>Student/Teacher Ratio:</strong> 7:1<br>
-                <strong>Affiliations:</strong> Montessori program for ages 3-6<br>
-                <strong>Approximate Tuition and Fees:</strong> $4,000 - $20,370<br>
-                <strong>Multi-child Discount:</strong> Contact school for details.<br>
+                <span class="label">Type of School:</span> Independent<br>
+                <span class="label">Address:</span> 194 North Limestone Street, Lexington, KY 40507<br>
+                <span class="label">Phone:</span> 859-254-1361<br>
+                <span class="label">Date Established:</span> 1854<br>
+                <span class="label">Applicable Grades:</span> PS-12th<br>
+                <span class="label">Current Enrollment:</span> 518<br>
+                <span class="label">Student/Teacher Ratio:</span> 7:1<br>
+                <span class="label">Affiliations:</span> Montessori program for ages 3-6<br>
+                <span class="label">Approximate Tuition and Fees:</span> $4,000 - $20,370<br>
+                <span class="label">Multi-child Discount:</span> Contact school for details.
             </li>
         </ul>
 
-        <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html" target="_blank">You can find more private schools in here</a>
+        <p>
+            <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html" target="_blank">You can find more private schools here</a>
+        </p>
     </section>
 </main>
 
 <!-- Full page centered image section -->
-<div class="image-container" style="text-align: center; margin: 20px 0;">
-    <img src="Multimedia_files/HandsTogether.jpg" width="400" height="300" title="Hands Together" class="centered-image" alt="Hands Together">
+<div class="image-container">
+    <img src="Multimedia_files/HandsTogether.jpg" width="400" height="300" title="Hands Together" alt="Hands Together" class="centered-image" />
 </div>
 
 <footer>
