--- a/resources.html
+++ b/resources.html
@@ -31,36 +31,44 @@
         <p>Our community offers a variety of services to help residents thrive. From health clinics to cultural centers, there's something for everyone.</p>
     </section>
 
-    <section>
-        <h2>Featured Resources</h2>
-        <p>Here are some valuable resources available to community members:</p>
+    <section class="flex-container">
+        <div class="flex-item">
+            <h2>Featured Resources</h2>
+            <p>Here are some valuable resources available to community members:</p>
 
-        <table class="resource-table">
-            <thead>
-                <tr>
-                    <th>Resource Name</th>
-                    <th>Type of Service</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Lexington Public Library</td>
-                    <td>Educational & Cultural</td>
-                </tr>
-                <tr>
-                    <td>Community Health Clinic</td>
-                    <td>Healthcare</td>
-                </tr>
-                <tr>
-                    <td>Volunteer Lexington</td>
-                    <td>Volunteer Opportunities</td>
-                </tr>
-                <tr>
-                    <td>Lexington Community Center</td>
-                    <td>Events & Activities</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="resource-table">
+                <thead>
+                    <tr>
+                        <th>Resource Name</th>
+                        <th>Type of Service</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lexington Public Library</td>
+                        <td>Educational & Cultural</td>
+                    </tr>
+                    <tr>
+                        <td>Community Health Clinic</td>
+                        <td>Healthcare</td>
+                    </tr>
+                    <tr>
+                        <td>Volunteer Lexington</td>
+                        <td>Volunteer Opportunities</td>
+                    </tr>
+                    <tr>
+                        <td>Lexington Community Center</td>
+                        <td>Events & Activities</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="flex-item">
+            <h2>Need Assistance?</h2>
+            <p>If you're unsure where to start or need help accessing services, visit our <a href="contact.html">Contact Page</a> for personalized guidance.</p>
+            <p>You can also stop by the community desk at the local center for in-person support.</p>
+        </div>
     </section>
 </main>
 
