--- a/schools.html
+++ b/schools.html
@@ -1,79 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Find private schools in the community.">
-    <meta name="keywords" content="schools, private schools, education">
-    <meta name="author" content="Alaa El Mediouri">
-    <title>Private Schools - Community Website</title>
-    <link rel="icon" type="image/png" href="alaapic.png">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Find private schools in the community." />
+  <meta name="keywords" content="schools, private schools, education" />
+  <meta name="author" content="Alaa El Mediouri" />
+  <title>Private Schools - Community Website</title>
+  <link rel="icon" type="image/png" href="alaapic.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
 <header>
-    <h1>Private Schools</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="schools.html">Private Schools</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+  <h1>Private Schools</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="schools.html">Private Schools</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 
 <main>
-    <section>
-        <h2>Find the Right School</h2>
-        <p>Our community is home to a variety of excellent private schools. Explore the list below to find the right fit for your child.</p>
-        <p>Browse a list of schools that provide academic excellence.</p>
-    </section>
+  <section>
+    <h2>Find the Right School</h2>
+    <p>Our community is home to a variety of excellent private schools. Explore the list below to find the right fit for your child.</p>
+    <p>Browse a list of schools that provide academic excellence and holistic development.</p>
+  </section>
 
-    <section>
-        <h2>Featured Private Schools</h2>
-        <ul>
-            <li>
-                <h3>The Lexington School Learning Center - Grades K-12</h3>
-                <strong>Type of School:</strong> Independent<br>
-                <strong>Address:</strong> 1050 Lane Allen Road, Lexington, KY 40504<br>
-                <strong>Phone:</strong> 859-278-0501<br>
-                <strong>Date Established:</strong> 1959<br>
-                <strong>Applicable Grades:</strong> PS-8th<br>
-                <strong>Current Enrollment:</strong> 558<br>
-                <strong>Student/Teacher Ratio:</strong> 7:1<br>
-                <strong>Approximate Tuition and Fees:</strong> $27,000<br>
-                <strong>Multi-child Discount:</strong> Contact school for details.<br>
-            </li>
+  <section>
+    <h2>Featured Private Schools</h2>
+    <ul>
+      <li>
+        <h3>The Lexington School Learning Center</h3>
+        <p><span class="label">Type of School:</span> Independent</p>
+        <p><span class="label">Address:</span> 1050 Lane Allen Road, Lexington, KY 40504</p>
+        <p><span class="label">Phone:</span> 859-278-0501</p>
+        <p><span class="label">Date Established:</span> 1959</p>
+        <p><span class="label">Applicable Grades:</span> PS-8th</p>
+        <p><span class="label">Current Enrollment:</span> 558</p>
+        <p><span class="label">Student/Teacher Ratio:</span> 7:1</p>
+        <p><span class="label">Approximate Tuition and Fees:</span> $27,000</p>
+        <p><span class="label">Multi-child Discount:</span> Contact school for details</p>
+      </li>
 
-            <li>
-                <h3>Sayre School - Grades PS-12th</h3>
-                <strong>Type of School:</strong> Independent<br>
-                <strong>Address:</strong> 194 North Limestone Street, Lexington, KY 40507<br>
-                <strong>Phone:</strong> 859-254-1361<br>
-                <strong>Date Established:</strong> 1854<br>
-                <strong>Applicable Grades:</strong> PS-12th<br>
-                <strong>Current Enrollment:</strong> 518<br>
-                <strong>Student/Teacher Ratio:</strong> 7:1<br>
-                <strong>Affiliations:</strong> Montessori program for ages 3-6<br>
-                <strong>Approximate Tuition and Fees:</strong> $4,000 - $20,370<br>
-                <strong>Multi-child Discount:</strong> Contact school for details.<br>
-            </li>
-        </ul>
+      <li>
+        <h3>Sayre School</h3>
+        <p><span class="label">Type of School:</span> Independent</p>
+        <p><span class="label">Address:</span> 194 North Limestone Street, Lexington, KY 40507</p>
+        <p><span class="label">Phone:</span> 859-254-1361</p>
+        <p><span class="label">Date Established:</span> 1854</p>
+        <p><span class="label">Applicable Grades:</span> PS-12th</p>
+        <p><span class="label">Current Enrollment:</span> 518</p>
+        <p><span class="label">Student/Teacher Ratio:</span> 7:1</p>
+        <p><span class="label">Affiliations:</span> Montessori program for ages 3–6</p>
+        <p><span class="label">Approximate Tuition and Fees:</span> $4,000 – $20,370</p>
+        <p><span class="label">Multi-child Discount:</span> Contact school for details</p>
+      </li>
+    </ul>
 
-        <a href="http://www.bluegrasseducation.com/lexington-fayette-private-schools.html" target="_blank">You can find more private schools in here</a>
-    </section>
+    <p>
+      <a href="https://www.bluegrasseducation.com/lexington-fayette-private-schools.html" target="_blank">
+        You can find more private schools here
+      </a>
+    </p>
+  </section>
+
+  <section>
+    <h2>School Community in Action</h2>
+    <div class="image-container">
+      <img src="Multimedia_files/HandsTogether.jpg" width="400" height="300" alt="Hands Together" title="Hands Together" class="centered-image" />
+    </div>
+  </section>
 </main>
 
-<!-- Full page centered image section -->
-<div class="image-container" style="text-align: center; margin: 20px 0;">
-    <img src="Multimedia_files/HandsTogether.jpg" width="400" height="300" title="Hands Together" class="centered-image" alt="Hands Together">
-</div>
-
 <footer>
-    <p>&copy; 2025 Community Website | <a href="contact.html">Contact Us</a></p>
+  <p>&copy; 2025 Community Website | <a href="contact.html">Contact Us</a></p>
 </footer>
 
 </body>
