--- a/contact.html
+++ b/contact.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact the Community Center team for inquiries or support.">
-    <meta name="keywords" content="contact, community center, support">
-    <meta name="author" content="Alaa El Mediouri">
-    <title>Contact Us - Community Center</title>
-    <link rel="icon" type="image/png" href="alaapic.png">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact the Community Website team." />
+  <meta name="keywords" content="contact, support, community" />
+  <meta name="author" content="Alaa El Mediouri" />
+  <title>Contact Us - Community Website</title>
+  <link rel="icon" type="image/png" href="alaapic.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<!-- Header Section -->
 <header>
-    <h1>Contact Us</h1>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="schools.html">Private Schools</a></li>
-            <li><a href="resources.html">Resources</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+  <h1>Contact Us</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="schools.html">Private Schools</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 
-<!-- Main Section -->
 <main>
-    <section>
-        <h2>Get in Touch</h2>
-        <p>If you have any questions or would like to get involved, feel free to reach out to us using the form below.</p>
+  <section>
+    <h2>Get in Touch</h2>
+    <p>If you have any questions, suggestions, or feedback, feel free to reach out using the form below:</p>
 
-        <form action="#" method="get">
-            <label for="name">Your Name:</label>
-            <input type="text" id="name" name="name" required>
+    <form action="#" method="post" class="contact-form">
+      <div class="form-group">
+        <label for="name">Name:</label><br />
+        <input type="text" id="name" name="name" required />
+      </div>
 
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required>
+      <div class="form-group">
+        <label for="email">Email:</label><br />
+        <input type="email" id="email" name="email" required />
+      </div>
 
-            <label for="message">Your Message:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
+      <div class="form-group">
+        <label for="message">Message:</label><br />
+        <textarea id="message" name="message" rows="6" required></textarea>
+      </div>
 
-            <input type="submit" value="Send Message">
-        </form>
-    </section>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
 </main>
 
-<!-- Footer Section -->
 <footer>
-    <p>&copy; 2025 Community Website | <a href="index.html">Home</a></p>
+  <p>&copy; 2025 Community Website | <a href="contact.html">Contact Us</a></p>
 </footer>
 
 </body>
