--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <meta name="description" content="A community website for newcomers providing information about the city, private schools, and local resources." />
   <meta name="keywords" content="community center, private schools, resources" />
   <meta name="author" content="Alaa El Mediouri" />
