--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <meta name="description" content="A community website for newcomers providing information about the city, private schools, and local resources." />
-  <meta name="keywords" content="community center, private schools, resources" />
-  <meta name="author" content="Alaa El Mediouri" />
+  <meta name="description" content="A community website for newcomers providing information about the city, private schools, and local resources." >
+  <meta name="keywords" content="community center, private schools, resources" >
+  <meta name="author" content="Alaa El Mediouri" >
   <title>Welcome to the Community Center</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" >
+  <link rel="stylesheet" href="styles.css" >
 </head>
 <body>
 
@@ -39,7 +39,7 @@
       This website is designed as a <em>resource hub</em> for our community. Whether you're looking for a private school for your children or other local services, you'll find helpful information here.
     </p>
     <div class="image-container" id="about-image">
-      <img src="Multimedia_files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY" />
+      <img src="Multimedia_files/Lexington_pic.jpg" width="400" height="300" title="Welcome to Lexington, KY" alt="Welcome to Lexington, KY" >
     </div>
   </section>
 
