--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
   <title>Welcome to the Community Center</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" >
   <link rel="stylesheet" href="styles.css" >
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Community Website",
+    "url": "https://alladin077.github.io/Semantic2025/",
+    "author": {
+      "@type": "Person",
+      "name": "Alaa El Mediouri"
+    },
+    "description": "A community website for newcomers providing information about the city, private schools, and local resources.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Community Website Team"
+    },
+    "inLanguage": "en"
+  }
+  </script>
 </head>
 <body>
 
