--- a/about.html
+++ b/about.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="About the Community Website - Learn more about our mission and goals." />
-  <meta name="keywords" content="about, community, mission" />
-  <meta name="author" content="Alaa El Mediouri" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="About the Community Website - Learn more about our mission and goals.">
+  <meta name="keywords" content="about, community, mission">
+  <meta name="author" content="Alaa El Mediouri">
   <title>About Us - Community Website</title>
-  <link rel="icon" type="image/png" href="alaapic.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="alaapic.png">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Community Website",
+    "url": "https://alladin077.github.io/Semantic2025/about.html",
+    "description": "A group of volunteers providing resources to help newcomers settle into the community.",
+    "founder": {
+      "@type": "Person",
+      "name": "Alaa El Mediouri"
+    },
+    "sameAs": [
+      "https://alladin077.github.io/Semantic2025/"
+    ]
+  }
+  </script>
 </head>
 <body>
 
