--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Contact the Community Website team." />
-  <meta name="keywords" content="contact, support, community" />
-  <meta name="author" content="Alaa El Mediouri" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contact the Community Website team.">
+  <meta name="keywords" content="contact, support, community">
+  <meta name="author" content="Alaa El Mediouri">
   <title>Contact Us - Community Website</title>
-  <link rel="icon" type="image/png" href="alaapic.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="alaapic.png">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contact Us - Community Website",
+    "url": "https://alladin077.github.io/Semantic2025/contact.html",
+    "description": "Page for users to contact the Community Website team for questions, suggestions, or feedback.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Community Website"
+    }
+  }
+  </script>
 </head>
 <body>
 
