--- a/resources.html
+++ b/resources.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore community resources available to residents.">
-    <meta name="keywords" content="resources, community, services">
-    <meta name="author" content="Alaa El Mediouri">
-    <title>Community Resources</title>
-    <link rel="icon" type="image/png" href="alaapic.png">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contact the Community Website team.">
+  <meta name="keywords" content="contact, support, community">
+  <meta name="author" content="Alaa El Mediouri">
+  <title>Contact Us - Community Website</title>
+  <link rel="icon" type="image/png" href="alaapic.png">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contact Us - Community Website",
+    "url": "https://alladin077.github.io/Semantic2025/contact.html",
+    "description": "Connect with the Community Website team for inquiries, support, or to share feedback.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Community Website",
+      "url": "https://alladin077.github.io/Semantic2025",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Customer Support",
+        "email": "support@communitywebsite.org",
+        "url": "https://alladin077.github.io/Semantic2025/contact.html"
+      }
+    }
+  }
+  </script>
 </head>
 <body>
 
